--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@800&display=swap');
 html {
 
-    scroll-behavior:sm
+    scroll-behavior:smooth;
 }
 
 
@@ -67,6 +67,8 @@ section.logo{
 
 
 img.bg{
+    filter: brightness(0.3);
+    background-color: rgba(0,0,0,.5);
     position:fixed;
     max-width:none;
     max-height:none;
@@ -74,7 +76,7 @@ img.bg{
     height:100%;
     right:0;
     bottom:0;
-    z-index:-1;
+    z-index:-3;
 }
 
 
@@ -92,6 +94,7 @@ ul{
 
 ul li{
     list-style-type:none;
+    padding:3px;
     list-style:none;
     margin-right:auto;
     margin-left:auto;
