--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ scroll-snap-align: start;
 
 
 section.logo{ 
+    background-color: rgba(0, 0, 0, 0.5);
     width:100%;
     height:100vh;
 }
@@ -67,8 +68,8 @@ section.logo{
 
 
 img.bg{
-    filter: brightness(0.3);
-    background-color: rgba(0,0,0,.5);
+    
+    background-color: rgba(0,0,0,1);
     position:fixed;
     max-width:none;
     max-height:none;
@@ -135,6 +136,7 @@ background-color: #fff;
 }
 
 section.links{
+    background-color: rgba(0, 0, 0, 0.5);
     height:100vh;
     justify-content: center;
     display:flex;
